--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -229,24 +229,20 @@ fieldset, input {margin: 0; padding: 0; border: none;}
     }
 }
 
-#header {
-    &.fixedTypeA {
-        position: fixed;
-        top: 0;
-        left: 0;
-        transition: color 0.25s ease;
-    }
-    
+#header {    
     &.fixedTypeB {
         position: fixed;
-        height: 50px;
+        line-height: 50px;
         top: 0;
         left: 0;
-        background: #fff;
+        background-color: rgba(255,255,255,1);
     }
     
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
-    height: 120px;
+    line-height: 120px;
     align-items: center;
     z-index: 1;
     width: 100%;
@@ -254,7 +250,8 @@ fieldset, input {margin: 0; padding: 0; border: none;}
     box-sizing: border-box;
     font-family: "GmarketSans";
     color: #222;
-    transition: background 0.65s ease, height 0.65s ease;
+    background-color: rgba(255,255,255,0);
+    transition: background 0.65s ease, line-height 0.65s ease, color 0.25s ease;
 
     &.active {
         color: #fff;
