--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -1,8 +1,19 @@
+#banner {
+  overflow: hidden;
+}
+#banner .slick-slide img {
+  width: 100%;
+}
+
 .container {
+  padding-top: 120px;
+}
+
+.content {
   margin-top: 80px;
   padding: 0 70px;
 }
-.container .top h1 {
+.content .top h1 {
   margin: 10px 0 20px 0;
   text-align: center;
   font-size: 33px;
@@ -10,18 +21,18 @@
   font-weight: 400;
   font-family: "GmarketSans";
 }
-.container .top ul {
+.content .top ul {
   display: flex;
   justify-content: center;
 }
-.container .top ul li {
+.content .top ul li {
   margin: 0 7px;
   padding: 15px 0;
   line-height: 1.5;
   text-align: center;
   font-size: 15px;
 }
-.container .top ul li span {
+.content .top ul li span {
   display: inline-block;
   min-width: 86px;
   padding: 14px 17px 14px 17px;
@@ -31,47 +42,47 @@
   border-radius: 50px;
   background-color: #fcfcfc;
 }
-.container .content .nav {
+.content .content .nav {
   display: flex;
   justify-content: flex-end;
   padding: 20px 0;
 }
-.container .content .nav svg {
+.content .content .nav svg {
   width: 35px;
   height: 35px;
   color: gray;
   cursor: pointer;
 }
-.container .content .nav .grid svg {
+.content .content .nav .grid svg {
   color: #222;
 }
-.container .content .products {
+.content .content .products {
   display: grid;
   -moz-column-gap: 40px;
        column-gap: 40px;
   row-gap: 80px;
 }
-.container .content .products.typeA {
+.content .content .products.typeA {
   grid-template-columns: repeat(2, 1fr);
 }
-.container .content .products.typeB {
+.content .content .products.typeB {
   grid-template-columns: repeat(4, 1fr);
 }
-.container .content .products .product .img {
+.content .content .products .product .img {
   position: relative;
   border-radius: 8px;
   overflow: hidden;
   margin-bottom: 10px;
   cursor: pointer;
 }
-.container .content .products .product .img:hover .likes {
+.content .content .products .product .img:hover .likes {
   opacity: 1;
 }
-.container .content .products .product .img:hover .icons {
+.content .content .products .product .img:hover .icons {
   opacity: 1;
   bottom: 10px;
 }
-.container .content .products .product .img .likes {
+.content .content .products .product .img .likes {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -82,23 +93,23 @@
   font-family: "GmarketSans";
   transition: opacity 0.5s ease;
 }
-.container .content .products .product .img .likes button {
+.content .content .products .product .img .likes button {
   position: relative;
   top: 2px;
   padding: 8px 12px;
   line-height: 1.5;
 }
-.container .content .products .product .img .likes strong {
+.content .content .products .product .img .likes strong {
   color: #222;
   font-size: 13px;
   font-weight: 400;
 }
-.container .content .products .product .img .likes .count {
+.content .content .products .product .img .likes .count {
   font-size: 13px;
   color: #999;
   padding-left: 3px;
 }
-.container .content .products .product .img .icons {
+.content .content .products .product .img .icons {
   display: flex;
   position: absolute;
   bottom: -10px;
@@ -106,27 +117,27 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-.container .content .products .product .img .icons span {
+.content .content .products .product .img .icons span {
   padding: 5px;
   border: 1px solid #e8e8e8;
   background: #fff;
 }
-.container .content .products .product .img .icons span svg {
+.content .content .products .product .img .icons span svg {
   width: 15px;
   height: 15px;
 }
-.container .content .products .product .description {
+.content .content .products .product .description {
   position: relative;
   padding-right: 65px;
 }
-.container .content .products .product .description .name {
+.content .content .products .product .description .name {
   line-height: 1.3;
   color: #222;
   font-size: 20px;
   font-weight: 400;
   margin-bottom: 5px;
 }
-.container .content .products .product .description .reviewCount {
+.content .content .products .product .description .reviewCount {
   position: absolute;
   top: 0;
   right: 0;
@@ -136,13 +147,13 @@
   font-size: 13px;
   font-weight: 400;
 }
-.container .content .products .product .description .price {
+.content .content .products .product .description .price {
   font-size: 21px;
   color: #222;
   font-weight: 700;
   margin-top: 5px;
 }
-.container .content .products .product .description .discountPrice {
+.content .content .products .product .description .discountPrice {
   font-size: 21px;
   color: #222;
   font-weight: 400;
