--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -5,15 +5,14 @@
   width: 100%;
 }
 
-.container {
+#productList {
   padding-top: 120px;
 }
-
-.content {
+#productList .content {
   margin-top: 80px;
   padding: 0 70px;
 }
-.content .top h1 {
+#productList .content .top h1 {
   margin: 10px 0 20px 0;
   text-align: center;
   font-size: 33px;
@@ -21,18 +20,18 @@
   font-weight: 400;
   font-family: "GmarketSans";
 }
-.content .top ul {
+#productList .content .top ul {
   display: flex;
   justify-content: center;
 }
-.content .top ul li {
+#productList .content .top ul li {
   margin: 0 7px;
   padding: 15px 0;
   line-height: 1.5;
   text-align: center;
   font-size: 15px;
 }
-.content .top ul li span {
+#productList .content .top ul li span {
   display: inline-block;
   min-width: 86px;
   padding: 14px 17px 14px 17px;
@@ -42,47 +41,47 @@
   border-radius: 50px;
   background-color: #fcfcfc;
 }
-.content .content .nav {
+#productList .content .content .nav {
   display: flex;
   justify-content: flex-end;
   padding: 20px 0;
 }
-.content .content .nav svg {
+#productList .content .content .nav svg {
   width: 35px;
   height: 35px;
   color: gray;
   cursor: pointer;
 }
-.content .content .nav .grid svg {
+#productList .content .content .nav .grid svg {
   color: #222;
 }
-.content .content .products {
+#productList .content .content .products {
   display: grid;
   -moz-column-gap: 40px;
        column-gap: 40px;
   row-gap: 80px;
 }
-.content .content .products.typeA {
+#productList .content .content .products.typeA {
   grid-template-columns: repeat(2, 1fr);
 }
-.content .content .products.typeB {
+#productList .content .content .products.typeB {
   grid-template-columns: repeat(4, 1fr);
 }
-.content .content .products .product .img {
+#productList .content .content .products .product .img {
   position: relative;
   border-radius: 8px;
   overflow: hidden;
   margin-bottom: 10px;
   cursor: pointer;
 }
-.content .content .products .product .img:hover .likes {
+#productList .content .content .products .product .img:hover .likes {
   opacity: 1;
 }
-.content .content .products .product .img:hover .icons {
+#productList .content .content .products .product .img:hover .icons {
   opacity: 1;
   bottom: 10px;
 }
-.content .content .products .product .img .likes {
+#productList .content .content .products .product .img .likes {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -93,23 +92,23 @@
   font-family: "GmarketSans";
   transition: opacity 0.5s ease;
 }
-.content .content .products .product .img .likes button {
+#productList .content .content .products .product .img .likes button {
   position: relative;
   top: 2px;
   padding: 8px 12px;
   line-height: 1.5;
 }
-.content .content .products .product .img .likes strong {
+#productList .content .content .products .product .img .likes strong {
   color: #222;
   font-size: 13px;
   font-weight: 400;
 }
-.content .content .products .product .img .likes .count {
+#productList .content .content .products .product .img .likes .count {
   font-size: 13px;
   color: #999;
   padding-left: 3px;
 }
-.content .content .products .product .img .icons {
+#productList .content .content .products .product .img .icons {
   display: flex;
   position: absolute;
   bottom: -10px;
@@ -117,27 +116,27 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-.content .content .products .product .img .icons span {
+#productList .content .content .products .product .img .icons span {
   padding: 5px;
   border: 1px solid #e8e8e8;
   background: #fff;
 }
-.content .content .products .product .img .icons span svg {
+#productList .content .content .products .product .img .icons span svg {
   width: 15px;
   height: 15px;
 }
-.content .content .products .product .description {
+#productList .content .content .products .product .description {
   position: relative;
   padding-right: 65px;
 }
-.content .content .products .product .description .name {
+#productList .content .content .products .product .description .name {
   line-height: 1.3;
   color: #222;
   font-size: 20px;
   font-weight: 400;
   margin-bottom: 5px;
 }
-.content .content .products .product .description .reviewCount {
+#productList .content .content .products .product .description .reviewCount {
   position: absolute;
   top: 0;
   right: 0;
@@ -147,13 +146,13 @@
   font-size: 13px;
   font-weight: 400;
 }
-.content .content .products .product .description .price {
+#productList .content .content .products .product .description .price {
   font-size: 21px;
   color: #222;
   font-weight: 700;
   margin-top: 5px;
 }
-.content .content .products .product .description .discountPrice {
+#productList .content .content .products .product .description .discountPrice {
   font-size: 21px;
   color: #222;
   font-weight: 400;
