--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -8,187 +8,187 @@
     }
 }
 
-.container {
+#productList {
     padding-top: 120px;    
-}
-
-.content {
-    margin-top: 80px;
-    padding: 0 70px;
-
-    .top {
-        h1 {
-            margin: 10px 0 20px 0;
-            text-align:center;
-            font-size: 33px;
-            color: #222;
-            font-weight: 400;
-            font-family: "GmarketSans";
-        }
-
-        ul {
-            display: flex;
-            justify-content: center;
-
-            li {
-                margin: 0 7px;
-                padding: 15px 0;
-                line-height: 1.5;
-                text-align: center;
-                font-size: 15px;
-
-                span {
-                    display: inline-block;
-                    min-width: 86px;
-                    padding: 14px 17px 14px 17px;
-                    font-weight: 400;
-                    color: #222;
-                    border: 1px solid #e6e6e6;
-                    border-radius: 50px;
-                    background-color: #fcfcfc;
-                }
-            }
-        }
-    }
 
     .content {
-        .nav {
-            display: flex;
-            justify-content: flex-end;
-            padding: 20px 0;
-
-            svg {
-                width: 35px;
-                height: 35px;
-                color: gray;
-                cursor: pointer;
+        margin-top: 80px;
+        padding: 0 70px;
+    
+        .top {
+            h1 {
+                margin: 10px 0 20px 0;
+                text-align:center;
+                font-size: 33px;
+                color: #222;
+                font-weight: 400;
+                font-family: "GmarketSans";
             }
-
-            .grid {
-                svg {
-                    color: #222;
+    
+            ul {
+                display: flex;
+                justify-content: center;
+    
+                li {
+                    margin: 0 7px;
+                    padding: 15px 0;
+                    line-height: 1.5;
+                    text-align: center;
+                    font-size: 15px;
+    
+                    span {
+                        display: inline-block;
+                        min-width: 86px;
+                        padding: 14px 17px 14px 17px;
+                        font-weight: 400;
+                        color: #222;
+                        border: 1px solid #e6e6e6;
+                        border-radius: 50px;
+                        background-color: #fcfcfc;
+                    }
                 }
             }
         }
-
-        .products {
-            &.typeA {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            &.typeB {
-                grid-template-columns: repeat(4, 1fr);
-            }
-
-            display: grid;
-            column-gap: 40px;
-            row-gap: 80px;
-
-            .product {
-                .img {
-                    position: relative;
-                    border-radius: 8px;
-                    overflow: hidden;
-                    margin-bottom:10px;
+    
+        .content {
+            .nav {
+                display: flex;
+                justify-content: flex-end;
+                padding: 20px 0;
+    
+                svg {
+                    width: 35px;
+                    height: 35px;
+                    color: gray;
                     cursor: pointer;
-
-                    &:hover {
-                        .likes  {
-                            opacity: 1;
-                        }
-
-                        .icons {
-                            opacity: 1;
-                            bottom: 10px;
-                        }
+                }
+    
+                .grid {
+                    svg {
+                        color: #222;
                     }
-
-                    .likes {
-                        position: absolute;
-                        top: 10px;
-                        right: 10px;
-                        border: 1px solid #e8e8e8;
-                        border-radius: 25px;
-                        background: #fff;
-                        opacity: 0;
-                        font-family: "GmarketSans";
-                        transition: opacity 0.5s ease;
-                        
-                        button {
-                            position: relative;
-                            top: 2px;
-                            padding: 8px 12px;
-                            line-height: 1.5;
+                }
+            }
+    
+            .products {
+                &.typeA {
+                    grid-template-columns: repeat(2, 1fr);
+                }
+    
+                &.typeB {
+                    grid-template-columns: repeat(4, 1fr);
+                }
+    
+                display: grid;
+                column-gap: 40px;
+                row-gap: 80px;
+    
+                .product {
+                    .img {
+                        position: relative;
+                        border-radius: 8px;
+                        overflow: hidden;
+                        margin-bottom:10px;
+                        cursor: pointer;
+    
+                        &:hover {
+                            .likes  {
+                                opacity: 1;
+                            }
+    
+                            .icons {
+                                opacity: 1;
+                                bottom: 10px;
+                            }
                         }
-                        
-                        strong {
-                            color: #222;
-                            font-size: 13px;
-                            font-weight: 400;
-                        }
-
-                        .count {
-                            font-size: 13px;
-                            color: #999;
-                            padding-left: 3px;
-                        }
-                    }
-
-                    .icons {
-                        display: flex;
-                        position: absolute;
-                        bottom: -10px;
-                        right: 10px;
-                        opacity: 0;
-                        transition: all 0.5s ease;
-
-                        span {
-                            padding: 5px;
+    
+                        .likes {
+                            position: absolute;
+                            top: 10px;
+                            right: 10px;
                             border: 1px solid #e8e8e8;
+                            border-radius: 25px;
                             background: #fff;
-
-                            svg {
-                                width: 15px;
-                                height: 15px;
+                            opacity: 0;
+                            font-family: "GmarketSans";
+                            transition: opacity 0.5s ease;
+                            
+                            button {
+                                position: relative;
+                                top: 2px;
+                                padding: 8px 12px;
+                                line-height: 1.5;
+                            }
+                            
+                            strong {
+                                color: #222;
+                                font-size: 13px;
+                                font-weight: 400;
+                            }
+    
+                            .count {
+                                font-size: 13px;
+                                color: #999;
+                                padding-left: 3px;
+                            }
+                        }
+    
+                        .icons {
+                            display: flex;
+                            position: absolute;
+                            bottom: -10px;
+                            right: 10px;
+                            opacity: 0;
+                            transition: all 0.5s ease;
+    
+                            span {
+                                padding: 5px;
+                                border: 1px solid #e8e8e8;
+                                background: #fff;
+    
+                                svg {
+                                    width: 15px;
+                                    height: 15px;
+                                }
                             }
                         }
                     }
-                }
-
-                .description {
-                    position: relative;
-                    padding-right: 65px;
-
-                    .name {
-                        line-height: 1.3;
-                        color: #222;
-                        font-size: 20px;
-                        font-weight: 400;
-                        margin-bottom: 5px;
-                    }
-
-                    .reviewCount {
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        border: 1px solid #e7e7e7;
-                        padding: 6px 9px;
-                        border-radius: 6px;
-                        font-size: 13px;
-                        font-weight: 400;   
-                    }
-
-                    .price {
-                        font-size: 21px;
-                        color: #222;
-                        font-weight: 700;
-                        margin-top: 5px;
-                    }
-
-                    .discountPrice {
-                        font-size: 21px;
-                        color: #222;
-                        font-weight: 400;
+    
+                    .description {
+                        position: relative;
+                        padding-right: 65px;
+    
+                        .name {
+                            line-height: 1.3;
+                            color: #222;
+                            font-size: 20px;
+                            font-weight: 400;
+                            margin-bottom: 5px;
+                        }
+    
+                        .reviewCount {
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            border: 1px solid #e7e7e7;
+                            padding: 6px 9px;
+                            border-radius: 6px;
+                            font-size: 13px;
+                            font-weight: 400;   
+                        }
+    
+                        .price {
+                            font-size: 21px;
+                            color: #222;
+                            font-weight: 700;
+                            margin-top: 5px;
+                        }
+    
+                        .discountPrice {
+                            font-size: 21px;
+                            color: #222;
+                            font-weight: 400;
+                        }
                     }
                 }
             }
