--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -401,6 +401,44 @@ fieldset, input {
   z-index: 1;
 }
 
+.container {
+  padding-top: 120px;
+}
+.container .top h1 {
+  margin: 10px 0 20px 0;
+  text-align: center;
+  font-size: 33px;
+  color: #222;
+  font-weight: 400;
+  font-family: "GmarketSans";
+}
+.container .top ul {
+  display: flex;
+  justify-content: center;
+}
+.container .top ul li {
+  margin: 0 7px;
+  padding: 15px 0;
+  line-height: 1.5;
+  text-align: center;
+  font-size: 15px;
+  cursor: pointer;
+}
+.container .top ul li span {
+  display: inline-block;
+  min-width: 86px;
+  padding: 14px 17px 14px 17px;
+  font-weight: 400;
+  color: #222;
+  border: 1px solid #e6e6e6;
+  border-radius: 50px;
+  background: #fcfcfc;
+}
+.container .top ul li.active span {
+  color: #fff;
+  background: #222;
+}
+
 .slides {
   position: relative;
 }
