--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -593,6 +593,29 @@ fieldset, input {margin: 0; padding: 0; border: none;}
             font-weight: 400;
         }
     }
+
+    .custom-slick-dots {
+        display: flex!important;
+        justify-content: center;
+        margin-top: 35px;
+
+        li {
+            width: 12px;
+            height: 12px;
+            border-radius: 30px;
+            margin: 0 3px;
+            border: 3px solid #555;
+            text-indent: -999px;
+            transition: color 0.25s ease,width 0.25s ease;
+            cursor:pointer;
+            box-sizing: border-box;
+
+            &.slick-active {
+                width: 28px;
+                border-color: #222;
+            }
+        }
+    }
 }
 
 
