--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -562,6 +562,24 @@ fieldset, input {
   border-color: #222;
 }
 
+.table table {
+  width: 100%;
+  border: 1px solid #e7e7e7;
+  text-align: center;
+}
+.table th {
+  padding: 13px 0;
+  font-size: 14px;
+  font-weight: 400;
+  border-bottom: 1px solid #e7e7e7;
+}
+.table td {
+  border-top: 1px solid #e7e7e7;
+  color: #999;
+  padding: 10px 0;
+  font-size: 15px;
+}
+
 @keyframes coupon {
   0% {
     top: 47px;
