--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -618,7 +618,28 @@ fieldset, input {margin: 0; padding: 0; border: none;}
     }
 }
 
+.table {
+    table {
+        width: 100%;
+        border: 1px solid #e7e7e7;
+        text-align:center;
+    }
 
+    th {
+        padding: 13px 0;
+        font-size: 14px;
+        font-weight: 400;
+        border-bottom: 1px solid #e7e7e7;
+    }
+
+    td {
+        border-top: 1px solid #e7e7e7;
+        color: #999;
+        padding: 10px 0;
+        font-size: 15px;
+    }
+}
+        
 @keyframes coupon {
     0% {top: 47px;}
     50% {top: 52px;}
