style: notice 작업 완료

--- a/src/assets/css/review.css
+++ b/src/assets/css/review.css
@@ -103,6 +103,9 @@
   padding-bottom: 15px;
   font-family: "GmarketSans";
 }
+#reviewList .wrapper .board .table td.product {
+  padding: 10px 0;
+}
 #reviewList .wrapper .board .table td.product p {
   display: flex;
   cursor: pointer;
