--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -565,6 +565,7 @@ fieldset, input {
 .table table {
   width: 100%;
   border: 1px solid #e7e7e7;
+  border-width: 1px 0 1px 0;
   text-align: center;
 }
 .table th {
@@ -576,7 +577,7 @@ fieldset, input {
 .table td {
   border-top: 1px solid #e7e7e7;
   color: #999;
-  padding: 10px 0;
+  padding: 25px 0;
   font-size: 15px;
 }
 
