--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -622,6 +622,7 @@ fieldset, input {margin: 0; padding: 0; border: none;}
     table {
         width: 100%;
         border: 1px solid #e7e7e7;
+        border-width: 1px 0 1px 0;
         text-align:center;
     }
 
@@ -635,7 +636,7 @@ fieldset, input {margin: 0; padding: 0; border: none;}
     td {
         border-top: 1px solid #e7e7e7;
         color: #999;
-        padding: 10px 0;
+        padding: 25px 0;
         font-size: 15px;
     }
 }
