--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -9,6 +9,7 @@ p {margin: 0}
 strong {font-weight:normal}
 a {color: #222; text-decoration: none;}
 fieldset, input {margin: 0; padding: 0; border: none;}
+em {font-style: normal;}
 
 #search {
     position: fixed;
