--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -168,3 +168,199 @@
         }
     }
 }
+
+#productDetail {
+    .wrapper {
+        display: flex;
+
+        .left {
+            width: 62%;
+            padding: 0 85px;
+
+            .container {
+                max-width: 600px;
+                margin: 0 auto;
+                padding-top: 10px;
+
+                .thumbnail {
+                    position: relative;
+                    max-width: 600px;
+                    padding-left: 100px;
+                    margin: 0 auto;
+                    
+                    .thumb {
+                        position: relative;
+                        
+                        .img {
+                            border-radius: 20px;
+                            overflow: hidden;
+                        }
+
+                        .review {
+                            position: absolute;
+                            bottom: 12px;
+                            left: 12px;
+                            padding: 11px 13px 11px 14px;
+                            background: #fff;
+                            border: 1px solid #e8e8e8;
+                            border-radius: 50px;
+                            font-size: 14px;
+                            
+                            span {
+                                position: absolute;
+                                display: inline-block;
+                                top: -10px;
+                                left: 13px;
+                                min-width: 20px;
+                                padding: 1px 6px 2px 6px;
+                                background: #222;
+                                font-size: 13px;
+                                border-radius: 50px;
+                                color: #fff;
+                                text-align: center;
+                            }
+                        }
+
+                        .like {
+                            position: absolute;
+                            top: 12px;
+                            left: 12px;
+                            border: 1px solid #e8e8e8;
+                            border-radius: 25px;
+                            background: #fff;
+                            padding: 10px 12px 11px 12px;
+                            font-size: 13px;
+                            font-weight: 400;
+
+                            strong {
+                                font-size: 13px;
+                                color: #999;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+
+                    .thumbList {
+                        position:absolute;
+                        top: 0;
+                        left: 0;
+                        width: 89px;
+
+                        li {
+                            margin-bottom: 15px;
+                            border: 1px solid #f4f4f4;
+                            border-radius: 6px;
+                            overflow: hidden;
+                        }
+                    }
+                }
+            }
+
+            .content {
+                padding-top: 250px;
+                color: #222;
+            }
+        }
+    
+        .right {
+            width: 38%;
+
+            .container {
+                position: relative;
+                max-width: 405px;
+                padding-top: 10px;
+
+                .head {
+                    padding-bottom: 15px;
+                    border-bottom: 1px solid #f4f4f4;
+
+                    h2 {
+                        font-size: 27px;
+                        color: #222;
+                        font-weight: 700;
+                        padding: 20px 0 10px;
+                    }
+
+                    p {
+                        font-size: 26px;
+                        color: #222;
+                        font-weight: 700;
+                    }
+                }
+
+                .info {
+                    padding-top: 10px;
+
+                    td {
+                        font-size: 15px;
+                        color: #222;
+                        padding: 10px 0;
+                        border-bottom: 1px solid #f4f4f4;
+                    }
+                }
+
+                .price {
+                    padding: 44px 9px 19px 9px;
+                    border-top: 1px solid #f4f4f4;
+                    color: #222;
+                    text-align: right;
+                    font-size: 14px;
+
+                    strong {
+                        font-weight: 400;
+                    }
+
+                    .total {
+                        em {
+                            font-size: 33px;
+                            font-weight: 700;
+                        }
+                    }
+                }
+
+                .buttons {
+                    min-height: 58px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .submit {
+                        padding: 19px 18px;
+                        width: 267px;
+                        margin-right: 10px;
+                        font-size: 16px;
+                        font-weight: 600;
+                        border-radius: 10px;
+                        background: #222;
+                        color: #fff;
+                        min-width: 80px;
+                    }
+
+                    .icon {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 58px;
+                        height: 58px;
+                        border: 1px solid #ddd;
+                        border-radius: 10px;
+                        cursor: pointer;
+
+                        &:hover {
+                            background: #eee;
+                        }
+
+                        &.cart {
+                            margin-right: 10px;
+                        }
+
+                        svg {
+                            width: 25px;
+                            height: 25px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
