--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -12,6 +12,11 @@
   font-weight: 300;
   font-family: "GmarketSans";
 }
+#introduce .wrapper .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 #introduce .wrapper .content .pb-60 {
   padding-bottom: 60px;
 }
@@ -25,4 +30,10 @@
   font-weight: 300;
   line-height: 1.6;
   font-family: "GmarketSans";
+}
+#introduce .wrapper .content .info p {
+  font-size: 21px;
+  font-weight: 300;
+  color: #999;
+  line-height: 1.7;
 }
