--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -16,6 +16,10 @@
         }
 
         .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             .pb-60 {
                 padding-bottom: 60px;
             }
@@ -30,6 +34,13 @@
                     font-weight: 300;
                     line-height: 1.6;
                     font-family: 'GmarketSans';
+                }
+
+                p {
+                    font-size: 21px;
+                    font-weight: 300;
+                    color: #999;
+                    line-height: 1.7;
                 }
             }
         }
