style: 회사소개 작업

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -12,13 +12,32 @@
   font-weight: 300;
   font-family: "GmarketSans";
 }
-#introduce .wrapper .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#introduce .wrapper .content img {
+  margin: 0 auto;
 }
 #introduce .wrapper .content .pb-60 {
   padding-bottom: 60px;
+}
+#introduce .wrapper .content .before {
+  position: relative;
+  text-align: right;
+  padding-top: 80px;
+}
+#introduce .wrapper .content .before::before {
+  content: "";
+  display: block;
+  clear: both;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 800px;
+  height: 500px;
+  background: #eee;
+  z-index: -1;
+}
+#introduce .wrapper .content .before img {
+  display: inline;
+  max-width: 800px;
 }
 #introduce .wrapper .content .info {
   padding-bottom: 100px;
@@ -36,4 +55,36 @@
   font-weight: 300;
   color: #999;
   line-height: 1.7;
+}
+#introduce .wrapper .content .history {
+  font-size: 20px;
+  font-weight: 400;
+  border-left: 2px solid #eee;
+  margin-left: 45%;
+  margin-bottom: 60px;
+}
+#introduce .wrapper .content .history li {
+  position: relative;
+  padding: 100px 55px;
+  text-align: left;
+  line-height: 2;
+}
+#introduce .wrapper .content .history li::after {
+  content: "";
+  display: block;
+  clear: both;
+  position: absolute;
+  top: 113px;
+  left: -7px;
+  width: 12px;
+  height: 12px;
+  border-radius: 10px;
+  background: #6aafe6;
+}
+#introduce .wrapper .content .history li h4 {
+  position: absolute;
+  top: 79px;
+  left: -140px;
+  font-size: 40px;
+  font-weight: 700;
 }
