--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -109,3 +109,10 @@
 #videoIntroduce .wrapper .content .pd-60 {
   padding-bottom: 60px;
 }
+
+#offline .wrapper .bg {
+  background-image: url("assets/images/about/offline.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
