--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -143,6 +143,20 @@
             background-position: 50% 50%;
             background-size: cover;
             background-repeat: no-repeat;
+
+            #map {
+                width: 100%;
+                height:0;
+                max-width: 1280px;
+                padding: 0 15px;
+                padding-bottom: 100%;
+                margin: 0 atuo;
+
+                .marker {
+                    width: 27px;
+                    height: 36px;
+                }
+            }
         }
     }
 }
