--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -138,24 +138,69 @@
 
 #offline {
     .wrapper {
+
         .bg {
+            width: 100%;
+            height: 1100px;
+            position: absolute;
+            top:0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             background-image: url('assets/images/about/offline.jpg');
             background-position: 50% 50%;
             background-size: cover;
             background-repeat: no-repeat;
+            filter: grayscale(100%);
+            z-index: 1;
+        }
+        
+        .mapWrap {
+            position: relative;
+            width: 100%;
+            max-width: 1280px;
+            margin: 0 auto;
+            z-index: 3;
+            
+            p {
+                font-size: 11px;
+                color: #fff;
+                padding: 15px 0;
+            }
 
-            #map {
-                width: 100%;
-                height:0;
-                max-width: 1280px;
-                padding: 0 15px;
-                padding-bottom: 100%;
-                margin: 0 atuo;
+            .home {
+                padding: 15px 0;
 
-                .marker {
-                    width: 27px;
-                    height: 36px;
+                svg {
+                    width: 35px;
+                    height: 35px;
+                    color: #fff;
+                    cursor: pointer;
                 }
+            }
+
+            .top {
+                position:relative;
+                width: 100%;
+                padding: 15px 0;
+                z-index: 2;
+    
+                h2 {
+                    color: #fff;
+                    font-size: 36px;
+                    font-weight: 700;
+                }
+            }
+        }
+
+        #map {
+            width: 100%;
+            padding: 0 15px;
+            padding-bottom: 60%;
+
+            .marker {
+                width: 27px;
+                height: 36px;
             }
         }
     }
