--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -208,14 +208,13 @@
                 li {
                     display: flex;
                     padding: 15px;
-                    line-height: 1.6;
+                    line-height: 1.7;
                     border-bottom: 1px solid #e5e5e5;
                     
                     .thumb {
-                        img {
-                            width: 80px;
-                            height: 80px;
-                        }
+                        width: 80px;
+                        height: 80px;
+                        margin-right: 15px;
                     }
 
                     h4, h5 {
