--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -274,12 +274,17 @@ em {
   height: 27px;
   background-image: url("../images/header/logo.svg");
   background-repeat: no-repeat;
-  text-indent: -9999px;
   cursor: pointer;
   transition: opacity 0.25s ease;
 }
 #header .logo:hover {
   opacity: 0.7;
+}
+#header .logo a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-indent: -9999px;
 }
 #header .menu {
   display: flex;
@@ -405,6 +410,80 @@ em {
   height: 3px;
   background: #222;
   z-index: 1;
+}
+
+#footer {
+  border: 1px solid #eee;
+  margin-top: 80px;
+  padding-bottom: 90px;
+}
+#footer .box {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 85px 85px 0 85px;
+}
+#footer .box .cs {
+  padding-bottom: 50px;
+}
+#footer .box .cs h3 {
+  font-size: 21px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+#footer .box .cs .call {
+  font-size: 38px;
+  font-weight: 600;
+  padding: 3px 0 7px 0;
+}
+#footer .box .cs .call span {
+  font-size: 17px;
+  color: #999;
+  padding-left: 10px;
+}
+#footer .box .cs .account {
+  font-size: 17px;
+}
+#footer .box .utilMenu li {
+  color: #222;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  padding: 3px 0;
+}
+#footer .box .copyright {
+  font-size: 16px;
+  color: #222;
+  line-height: 1.8;
+}
+#footer .box .sns {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-bottom: 100px;
+}
+#footer .box .sns li {
+  padding-left: 40px;
+  font-size: 45px;
+  color: #222;
+  cursor: pointer;
+}
+#footer .box .sns li.facebook svg:hover {
+  color: #3b5998;
+}
+#footer .box .sns li.instagram svg:hover {
+  color: #3897f0;
+}
+#footer .box .sns li.youtube svg:hover {
+  color: #ff0000;
+}
+#footer .box .address {
+  text-align: right;
+  font-size: 16px;
+  color: #222;
+  line-height: 1.8;
+}
+#footer .box .address span {
+  padding-left: 8px;
 }
 
 .container {
