--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -273,12 +273,18 @@ em {font-style: normal;}
         height: 27px;
         background-image: url("../images/header/logo.svg");
         background-repeat: no-repeat;
-        text-indent: -9999px;
         cursor: pointer;
         transition: opacity 0.25s ease;
 
         &:hover {
             opacity: 0.7;
+        }
+
+        a {
+            display:block;
+            width: 100%;
+            height: 100%;
+            text-indent: -9999px;
         }
     }
 
@@ -422,6 +428,97 @@ em {font-style: normal;}
                     background: #222;
                     z-index: 1;
                 }
+            }
+        }
+    }
+}
+
+#footer {
+    border: 1px solid #eee;
+    margin-top: 80px;
+    padding-bottom: 90px;
+
+    .box {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding: 85px 85px 0 85px;
+
+        .cs {
+            padding-bottom: 50px;
+
+            h3 {
+                font-size: 21px;
+                font-weight: 600;
+                padding-bottom: 5px;
+            }
+
+            .call {
+                font-size: 38px;
+                font-weight: 600;
+                padding: 3px 0 7px 0;
+
+                span {
+                    font-size: 17px;
+                    color: #999;
+                    padding-left: 10px;
+                }
+            }
+
+            .account {
+                font-size: 17px;
+            }
+        }
+
+        .utilMenu {
+            li {
+                color: #222;
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 1.5;
+                padding: 3px 0;
+            }
+        }
+
+        .copyright {
+            font-size: 16px;
+            color:#222;
+            line-height: 1.8;
+        }
+
+        .sns {
+            display: flex;
+            flex-direction: row-reverse;
+            padding-bottom: 100px;
+
+            li {
+                padding-left: 40px;
+                font-size: 45px;
+                color: #222;
+                cursor: pointer;
+
+                &.facebook svg:hover {
+                    color: #3b5998;
+                }
+
+                &.instagram svg:hover {
+                    color: #3897f0;
+                }
+
+                &.youtube svg:hover {
+                    color: #ff0000;
+                }
+            }
+        }
+
+        .address {
+            text-align: right;
+            font-size: 16px;
+            color: #222;
+            line-height: 1.8;
+
+            span {
+                padding-left: 8px;
             }
         }
     }
