--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -649,75 +649,13 @@
 }
 #fullpage .section.footer {
   height: auto;
-  padding-bottom: 90px;
 }
-#fullpage .section.footer .box {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+#fullpage .section.footer #footer {
+  border: none;
+  margin-top: 0;
+}
+#fullpage .section.footer #footer .box {
   padding: 30px 85px 0 85px;
-}
-#fullpage .section.footer .box .cs {
-  padding-bottom: 50px;
-}
-#fullpage .section.footer .box .cs h3 {
-  font-size: 21px;
-  font-weight: 600;
-  padding-bottom: 5px;
-}
-#fullpage .section.footer .box .cs .call {
-  font-size: 38px;
-  font-weight: 600;
-  padding: 3px 0 7px 0;
-}
-#fullpage .section.footer .box .cs .call span {
-  font-size: 17px;
-  color: #999;
-  padding-left: 10px;
-}
-#fullpage .section.footer .box .cs .account {
-  font-size: 17px;
-}
-#fullpage .section.footer .box .utilMenu li {
-  color: #222;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 1.5;
-  padding: 3px 0;
-}
-#fullpage .section.footer .box .copyright {
-  font-size: 16px;
-  color: #222;
-  line-height: 1.8;
-}
-#fullpage .section.footer .box .sns {
-  display: flex;
-  flex-direction: row-reverse;
-  padding-bottom: 100px;
-}
-#fullpage .section.footer .box .sns li {
-  padding-left: 40px;
-  font-size: 45px;
-  color: #222;
-  cursor: pointer;
-}
-#fullpage .section.footer .box .sns li.facebook svg:hover {
-  color: #3b5998;
-}
-#fullpage .section.footer .box .sns li.instagram svg:hover {
-  color: #3897f0;
-}
-#fullpage .section.footer .box .sns li.youtube svg:hover {
-  color: #ff0000;
-}
-#fullpage .section.footer .box .address {
-  text-align: right;
-  font-size: 16px;
-  color: #222;
-  line-height: 1.8;
-}
-#fullpage .section.footer .box .address span {
-  padding-left: 8px;
 }
 #fullpage .section .content {
   display: flex;
