style: top css 수정

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -489,6 +489,15 @@ em {
 .container {
   padding-top: 120px;
 }
+.container .top {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, -20px);
+  opacity: 0;
+}
+.container .top.onload {
+  transform: translate(0, 0);
+  opacity: 1;
+}
 .container .top h1 {
   margin: 10px 0 20px 0;
   text-align: center;
