--- a/src/assets/css/collection.css
+++ b/src/assets/css/collection.css
@@ -20,6 +20,13 @@
 }
 #collectionList .content.typeA .collections {
   grid-template-columns: repeat(1, 1fr);
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, 40px);
+  opacity: 0;
+}
+#collectionList .content.typeA .collections.onload {
+  transform: translate(0, 0);
+  opacity: 1;
 }
 #collectionList .content.typeB {
   max-width: 1560px;
