--- a/src/assets/css/collection.scss
+++ b/src/assets/css/collection.scss
@@ -26,6 +26,14 @@
 
             .collections {
                 grid-template-columns: repeat(1, 1fr);   
+                transition: transform 1.5s ease,opacity 1.5s ease;
+                transform: translate(0, 40px);
+                opacity: 0;
+
+                &.onload {
+                    transform: translate(0, 0);
+                    opacity: 1;
+                }
             }
         }
 
