--- a/src/assets/css/event.css
+++ b/src/assets/css/event.css
@@ -8,6 +8,13 @@
   grid-template-columns: repeat(2, 1fr);
   -moz-column-gap: 50px;
        column-gap: 50px;
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, 40px);
+  opacity: 0;
+}
+#eventList .content ul.onload {
+  transform: translate(0, 0);
+  opacity: 1;
 }
 #eventList .content ul li {
   border-radius: 18px;
