--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -39,6 +39,11 @@
   display: inline;
   max-width: 800px;
 }
+#introduce .wrapper .content .mainImg {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, 40px);
+  opacity: 0;
+}
 #introduce .wrapper .content .info {
   padding-bottom: 100px;
   text-align: center;
@@ -49,6 +54,9 @@
   font-weight: 300;
   line-height: 1.6;
   font-family: "GmarketSans";
+}
+#introduce .wrapper .content .info h3 span {
+  display: inline-block;
 }
 #introduce .wrapper .content .info p {
   font-size: 21px;
