--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -48,6 +48,12 @@
                 }
             }
 
+            .mainImg {
+                transition: transform 1.5s ease,opacity 1.5s ease;
+                transform: translate(0, 40px);
+                opacity: 0;
+            }
+            
             .info {
                 padding-bottom: 100px;
                 text-align: center;
@@ -58,6 +64,8 @@
                     font-weight: 300;
                     line-height: 1.6;
                     font-family: 'GmarketSans';
+
+                    span {display: inline-block;}
                 }
 
                 p {
