--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -489,15 +489,6 @@ em {
 .container {
   padding-top: 120px;
 }
-.container .top {
-  transition: transform 1.5s ease, opacity 1.5s ease;
-  transform: translate(0, -20px);
-  opacity: 0;
-}
-.container .top.onload {
-  transform: translate(0, 0);
-  opacity: 1;
-}
 .container .top h1 {
   margin: 10px 0 20px 0;
   text-align: center;
@@ -674,6 +665,35 @@ em {
   color: #999;
   padding: 25px 0;
   font-size: 15px;
+}
+
+.onload {
+  transform: translate(0, 0) !important;
+  opacity: 1 !important;
+}
+
+.fromTopIn20 {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, -20px);
+  opacity: 0;
+}
+
+.fromBottomIn40 {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(0, 40px);
+  opacity: 0;
+}
+
+.fromLeftIn20 {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(-20px, 0);
+  opacity: 0;
+}
+
+.fromRightIn20 {
+  transition: transform 1.5s ease, opacity 1.5s ease;
+  transform: translate(20px, 0);
+  opacity: 0;
 }
 
 @keyframes coupon {
