--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -209,9 +209,41 @@
                 height: 36px;
             }
 
+            .iw_inner {
+                height: 100px;
+                padding: 15px;
+
+                h3 {
+                    font-size: 14px;
+                    color: #211d90;
+                    margin-bottom: 5px;
+                }
+                
+                p {
+                    font-size: 12px;
+                    line-height: 20px;
+
+                    span {
+                        display: block;
+                    }
+
+                    .address {
+                        color: #757575;
+                    }
+
+                    .tell {
+                        color: #211d90;
+                    }
+                }
+            }
+
             .mapList {
+                position: absolute;
+                top: 20px;
+                left: 20px;
                 width: 320px;
                 background: #fff;
+                z-index: 997;
 
                 li {
                     display: flex;
