style: 상품 style 변경

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -50,6 +50,7 @@
   overflow: hidden;
   margin-bottom: 10px;
   cursor: pointer;
+  background: #c9c9c9;
 }
 #productList .wrapper .content .products .product .img:hover .likes {
   opacity: 1;
