--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -63,6 +63,7 @@
                         overflow: hidden;
                         margin-bottom:10px;
                         cursor: pointer;
+                        background: #c9c9c9;
     
                         &:hover {
                             .likes  {
